# DocBlocks

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/docblocks/: __init__.py  cli.py  core.py
src/docblocks/export/: text_exporter.py
src/docblocks/extraction/: text_blocks.py
src/docblocks/io/: pdf_reader.py
tests/: test_edge_cases.py  test_run.py
